--- a/index.html
+++ b/index.html
@@ -5,16 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Aula 1 Ada Tech</title>
+    <title>Meus estudos HTML</title>
 </head>
 
 <body>
-    <h1>All ready</h1>
-    <hr>
-    <br>
-    <h2>All time low</h2>
-    <h3>All shaw perish</h3>
-    <h4>Suicide silence</h4>
+    
     <!-- A div é um bloco -->
 
     <div>isso é uma div</div>
